--- a/ClosetMate/view/frontend/onboarding.html
+++ b/ClosetMate/view/frontend/onboarding.html
@@ -48,8 +48,8 @@
 
       <!-- Actions -->
       <div class="form-actions">
-        <button class="btn btn-primary">Save & Continue</button>
-        <button class="btn btn-primary">Skip for Now</button>
+        <a href="mainmenu.html" class="btn btn-primary">Save & Continue</a>
+        <a href="mainmenu.html" class="btn btn-primary">Skip for now</a>
       </div>
     </div>
   </div>
