--- a/ClosetMate/view/frontend/signup.html
+++ b/ClosetMate/view/frontend/signup.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="login-container">
-        <div class="login-card">
+    <div class="signup-container">
+        <div class="glass-card">
             <div class="login-header">
                 <h2>Create Account</h2>
                 <p>Sign up to get started</p>
